--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
     <nav>
       <div class="logo">KIDDOW'S SNEAKER PLUG</div>
       <ul>
-        <li><a href="about.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="shoes.html">Shoes</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
