--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="shoes.html">Shoes</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
