--- a/shoes.html
+++ b/shoes.html
@@ -152,7 +152,7 @@
   }
 
   .popup-content {
-    background: red;
+    background: white;
     padding: 25px 20px;
     border-radius: 10px;
     text-align: center;
