--- a/shoes.html
+++ b/shoes.html
@@ -38,7 +38,7 @@
       <a href="#" class="btn" onclick="buyNow('nike af1')">Buy Now</a>
     </div>
     <div class="product-card">
-      <img src="airForce.jpg" alt="Urban Dash">
+      <img src="sneaker3333.jpg" alt="Urban Dash">
       <h3>NIKE AF1</h3>
       <br>
       <p></p>
@@ -46,7 +46,7 @@
     </div>
 
     <div class="product-card">
-      <img src="airForce.jpg" alt="Urban Dash">
+      <img src="sneaker3334.jpg" alt="Urban Dash">
       <h3>NIKE AF1</h3>
       <br>
       <p></p>
@@ -54,7 +54,7 @@
     </div>
 
     <div class="product-card">
-      <img src="airForce.jpg" alt="Urban Dash">
+      <img src="sneaker3335.jpg" alt="Urban Dash">
       <h3>NIKE AF1</h3>
       <br>
       <p></p>
@@ -62,7 +62,7 @@
     </div>
 
     <div class="product-card">
-      <img src="airForce.jpg" alt="Urban Dash">
+      <img src="sneaker3337.jpg" alt="Urban Dash">
       <h3>NIKE AF1</h3>
       <br>
       <p></p>
@@ -70,7 +70,7 @@
     </div>
 
     <div class="product-card">
-      <img src="airForce.jpg" alt="Urban Dash">
+      <img src="sneaker3339.jpg" alt="Urban Dash">
       <h3>NIKE AF1</h3>
       <br>
       <p></p>
@@ -78,7 +78,7 @@
     </div>
 
     <div class="product-card">
-      <img src="airForce.jpg" alt="Urban Dash">
+      <img src="sneaker33338.jpg" alt="Urban Dash">
       <h3>NIKE AF1</h3>
       <br>
       <p></p>
@@ -86,7 +86,7 @@
     </div>
 
     <div class="product-card">
-      <img src="airForce.jpg" alt="Urban Dash">
+      <img src="snekaer3336.jpg" alt="Urban Dash">
       <h3>NIKE AF1</h3>
       <br>
       <p></p>
@@ -96,7 +96,7 @@
 
 
     <div class="product-card">
-      <img src="airForce.jpg" alt="Urban Dash">
+      <img src="WhatsApp Image 2025-05-29 at 16.26.13_dd30d307.jpg" alt="Urban Dash">
       <h3>NIKE AF1</h3>
       <br>
       <p></p>
