--- a/shoes.html
+++ b/shoes.html
@@ -25,71 +25,80 @@
   <section class="products-grid" id="products">
     <div class="product-card">
       <img src="nikeKyrie.jpeg" alt="Air Runner">
-      <h3>NIKE KYRIE</h3>
+      <h4>NIKE KYRIE</h4>
       <br>
-      <p></p>
+       <p>R 5000,00</p>
+      <br>
       <a href="#" class="btn" onclick="buyNow('nike af1')">Buy Now</a> 
     </div>
     <div class="product-card">
       <img src="nikedunks.jpeg" alt="Classic Flex">
-      <h3>NIKE DUNKS LOW</h3>
+      <h4>NIKE DUNKS LOW</h4>
       <br>
-      <p></p>
+        <p>R 5000,00</p>
+      <br>
       <a href="#" class="btn" onclick="buyNow('nike af1')">Buy Now</a>
     </div>
     <div class="product-card">
       <img src="sneaker3333.jpg" alt="Urban Dash">
-      <h3>NIKE AF1</h3>
+      <h4>Air force 1'07 LV8(SIZE:6-12)</h4>
       <br>
-      <p></p>
+     <p>R 5000,00</p>
+      <br>
       <a href="#" class="btn" onclick="buyNow('nike af1')">Buy Now</a>
     </div>
 
     <div class="product-card">
       <img src="sneaker3334.jpg" alt="Urban Dash">
-      <h3>NIKE AF1</h3>
+      <h4>Air force 1'07 LV8(SIZE:6-12)</h4>
       <br>
-      <p></p>
+        <p>R 5000,00</p>
+      <br>
       <a href="#" class="btn" onclick="buyNow('nike af1')">Buy Now</a>
     </div>
 
     <div class="product-card">
       <img src="sneaker3335.jpg" alt="Urban Dash">
-      <h3>NIKE AF1</h3>
+      <h4>Air force 1'07 LV8(SIZE:6-12)</h4>
       <br>
-      <p></p>
+        <p>R 5000,00</p>
+      <br>
       <a href="#" class="btn" onclick="buyNow('nike af1')">Buy Now</a>
     </div>
 
     <div class="product-card">
       <img src="sneaker3337.jpg" alt="Urban Dash">
-      <h3>NIKE AF1</h3>
+      <h4>Run Star hike OX(SIZE:3-8)</h4>
       <br>
-      <p></p>
+      <p>R 5000,00</p>
+      <br>
       <a href="#" class="btn" onclick="buyNow('nike af1')">Buy Now</a>
     </div>
 
     <div class="product-card">
       <img src="sneaker3339.jpg" alt="Urban Dash">
-      <h3>NIKE AF1</h3>
+      <h4>Nike air max portal(SIZE:2,5-9,5)</h4>
       <br>
-      <p></p>
+       <p>R 5000,00</p>
+      <br>
       <a href="#" class="btn" onclick="buyNow('nike af1')">Buy Now</a>
     </div>
 
     <div class="product-card">
       <img src="sneaker33338.jpg" alt="Urban Dash">
-      <h3>NIKE AF1</h3>
+      <h4>Nike air max portal(SIZE:2,5-9,5)</h4>
       <br>
-      <p></p>
+       <p>R 5000,00</p>
+      <br>
       <a href="#" class="btn" onclick="buyNow('nike')">Buy Now</a>
     </div>
 
     <div class="product-card">
       <img src="snekaer3336.jpg" alt="Urban Dash">
-      <h3>NIKE AF1</h3>
+      <h4> New Balance BB550 VI-oyster white(SIZE:6-11)</h4>
       <br>
-      <p></p>
+        <p>R 5000,00</p>
+      <br>
       <a href="#" class="btn" onclick="buyNow('nike af1')">Buy Now</a>
     </div>
     
