--- a/shoes.html
+++ b/shoes.html
@@ -101,21 +101,15 @@
       <br>
       <a href="#" class="btn" onclick="buyNow('nike af1')">Buy Now</a>
     </div>
-    
-
-
-    <div class="product-card">
+      <div class="product-card">
       <img src="WhatsApp Image 2025-05-29 at 16.26.13_dd30d307.jpg" alt="Urban Dash">
-      <h3>NIKE AF1</h3>
+      <h4>Air force 1'07 LV8(SIZE:6-12)</h4>
       <br>
      <p>R 2600,00</p>
       <br>
       <a href="#" class="btn" onclick="buyNow('NIKE AF1')">Buy Now</a>
     </div>
   </div>
-  
-   
-
 
 <!-- Popup Modal -->
 <div id="popup" class="popup">
@@ -127,86 +121,6 @@
     <button onclick="closePopup()" class="popup-button">OK</button>
   </div>
 </div>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-  }
-
-  .product-card {
-    max-width: 300px;
-    padding: 20px;
-    text-align: center;
-  }
-
-  .btn {
-    padding: 10px 20px;
-    background-color: #111;
-    color: white;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    text-decoration: none;
-  }
-
-  .popup {
-    display: none;
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.6);
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-
-  .popup-content {
-    background: white;
-    padding: 25px 20px;
-    border-radius: 10px;
-    text-align: center;
-    width: 90%;
-    max-width: 350px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    animation: fadeIn 0.3s ease-in-out;
-  }
-
-  .close-btn {
-    position: absolute;
-    right: 20px;
-    top: 10px;
-    font-size: 24px;
-    cursor: pointer;
-  }
-
-  .popup-button {
-    margin-top: 15px;
-    padding: 10px 20px;
-    background: #111;
-    color: white;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-  }
-
-  @keyframes fadeIn {
-    from { transform: scale(0.8); opacity: 0; }
-    to { transform: scale(1); opacity: 1; }
-  }
-</style>
-<script>
-  function buyNow() {
-    
-    document.getElementById("popup").style.display = "flex";
-  }
-
-  function closePopup() {
-    document.getElementById("popup").style.display = "none";
-  }
-</script>
-
-    <!--making a popup-->
   </section>
 </section>
  
@@ -215,5 +129,5 @@
     <p>&copy; 2025 KIDDOW'S KICKS. All rights reserved.</p>
   </footer>
 </body>
-<script src="kicks.js"></script>
+<script src="shoes.js"></script>
 </html>
