updating images on one folder called images

--- a/shoes.html
+++ b/shoes.html
@@ -24,7 +24,7 @@
 
   <section class="products-grid" id="products">
     <div class="product-card">
-      <img src="nikeKyrie.jpeg" alt="Air Runner">
+      <img src="images/nikeKyrie.jpeg" alt="Air Runner">
       <h4>NIKE KYRIE</h4>
       <br>
        <p>R 2999,90</p>
@@ -32,7 +32,7 @@
       <a href="#" class="btn" onclick="buyNow('nike af1')">Buy Now</a> 
     </div>
     <div class="product-card">
-      <img src="nikedunks.jpeg" alt="Classic Flex">
+      <img src="images/nikedunks.jpeg" alt="Classic Flex">
       <h4>NIKE DUNKS LOW</h4>
       <br>
         <p>R 2300,00</p>
@@ -40,7 +40,7 @@
       <a href="#" class="btn" onclick="buyNow('nike af1')">Buy Now</a>
     </div>
     <div class="product-card">
-      <img src="sneaker3333.jpg" alt="Urban Dash">
+      <img src="images/sneaker3333.jpg" alt="Urban Dash">
       <h4>Air force 1'07 LV8(SIZE:6-12)</h4>
       <br>
      <p>R 2599,90</p>
@@ -49,7 +49,7 @@
     </div>
 
     <div class="product-card">
-      <img src="sneaker3334.jpg" alt="Urban Dash">
+      <img src="images/sneaker3334.jpg" alt="Urban Dash">
       <h4>Air force 1'07 LV8(SIZE:6-12)</h4>
       <br>
         <p>R 2599,90</p>
@@ -58,7 +58,7 @@
     </div>
 
     <div class="product-card">
-      <img src="sneaker3335.jpg" alt="Urban Dash">
+      <img src="images/sneaker3335.jpg" alt="Urban Dash">
       <h4>Air force 1'07 LV8(SIZE:6-12)</h4>
       <br>
         <p>R 2600,00</p>
@@ -67,7 +67,7 @@
     </div>
 
     <div class="product-card">
-      <img src="sneaker3337.jpg" alt="Urban Dash">
+      <img src="images/sneaker3337.jpg" alt="Urban Dash">
       <h4>Run Star hike OX(SIZE:3-8)</h4>
       <br>
       <p>R 2299,90</p>
@@ -76,7 +76,7 @@
     </div>
 
     <div class="product-card">
-      <img src="sneaker3339.jpg" alt="Urban Dash">
+      <img src="images/sneaker3339.jpg" alt="Urban Dash">
       <h4>Nike air max portal(SIZE:2,5-9,5)</h4>
       <br>
        <p>R 2299,90</p>
@@ -85,7 +85,7 @@
     </div>
 
     <div class="product-card">
-      <img src="sneaker33338.jpg" alt="Urban Dash">
+      <img src="images/sneaker33338.jpg" alt="Urban Dash">
       <h4>Nike air max portal(SIZE:2,5-9,5)</h4>
       <br>
        <p>R 2299,90</p>
@@ -94,7 +94,7 @@
     </div>
 
     <div class="product-card">
-      <img src="snekaer3336.jpg" alt="Urban Dash">
+      <img src="images/snekaer3336.jpg" alt="Urban Dash">
       <h4> New Balance BB550 VI-oyster white(SIZE:6-11)</h4>
       <br>
         <p>R 2599,99</p>
@@ -102,7 +102,7 @@
       <a href="#" class="btn" onclick="buyNow('nike af1')">Buy Now</a>
     </div>
       <div class="product-card">
-      <img src="WhatsApp Image 2025-05-29 at 16.26.13_dd30d307.jpg" alt="Urban Dash">
+      <img src="images/WhatsApp Image 2025-05-29 at 16.26.13_dd30d307.jpg" alt="Urban Dash">
       <h4>Air force 1'07 LV8(SIZE:6-12)</h4>
       <br>
      <p>R 2600,00</p>
